--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -514,7 +514,7 @@ span.green{
 }
 
 .peer{
-    border: 1px solid #DDD;
+    border: 1px solid #EEE;
     float: left;
     height: 58px;
     margin: 5px 9px 5px 0;
