--- a/web/css/calendar.css
+++ b/web/css/calendar.css
@@ -49,5 +49,5 @@
     padding: 5px 10px;
     position: relative;
     display: block;
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #EEE;
 }
