--- a/web/css/discussion.css
+++ b/web/css/discussion.css
@@ -221,8 +221,8 @@ span.separator{
 .discussion-potential-member{
     display: inline-block;
     clear: both !important;
-    width: 480px;
-    border-bottom: 1px solid #DDD;
+    width: 465px;
+    border-bottom: 1px solid #EEE;
     padding: 5px 0;
 }
 
@@ -351,11 +351,12 @@ span.separator{
 }
 
 .message{
-    border: 1px solid #DDD;
+    border: 1px solid #EEE;
     margin-left: 65px;
     padding: 5px;
     min-height: 41px;
     background-color: #FFF;
+    border-right: none !important;
 }
 
 .thread .icon{
@@ -372,13 +373,14 @@ span.separator{
     margin: -1px 0 0 65px;
     clear: both;
     background-color: #F9F9F9;
-    border: 1px solid #DDD;
+    border: 1px solid #EEE;
     border-bottom: none !important;
+    border-right: none !important;
 }
 
 .comment{
     padding: 10px 0 5px 10px;
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #EEE;
 }
 
 #discussion_topic_reply_reply{
@@ -446,7 +448,7 @@ span.separator{
     background-color: white;
     padding: 5px;
     width: 60px;
-    border: 1px solid #DDD;
+    border: 1px solid #EEE;
     padding-top: 0px;
     display: none;
 }
@@ -461,7 +463,7 @@ span.separator{
     height: 47px;
     word-break: break-all;
     clear: both;
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #EEE;
     padding: 10px;
 }
 
@@ -473,7 +475,7 @@ span.separator{
     padding: 5px 10px;
     position: relative;
     display: block;
-    border-bottom: 1px solid #DDD;
+    border-top: 1px solid #EEE;
 }
 
 .discussion, .discussion_topic{
@@ -482,5 +484,9 @@ span.separator{
     display: block;
     clear: both;
     background-color: #FFF;
-    border-bottom: 1px solid #DDD;
+    border-top: 1px solid #EEE;
+}
+
+#middle-column .notice{
+    margin-left: 0px !important;
 }
