--- a/web/css/form.css
+++ b/web/css/form.css
@@ -23,7 +23,7 @@ input[type=button], input[type=submit] {
     -webkit-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 0px 10px;
+    padding: 2px 10px 3px;
     cursor: hand;
     cursor: pointer;
     font-size: 11px;
@@ -41,6 +41,7 @@ input[type=button], input[type=submit] {
     border: 1px solid #CCCDCE;
     color: #666666 !important;
     font-size: 13px;
+    padding: 2px 10px 3px;
 }
 
 .cancel:hover, .done:hover{
@@ -107,6 +108,7 @@ input[type="password"]:focus, input[type="text"]:focus, textarea:focus{
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#429CA9',EndColorStr='#337883');
     color: #FFF !important;
     border: 1px solid #337883;
+    padding: 2px 10px 3px;
 }
 
 .enroll:hover, .invite:hover{
@@ -132,6 +134,7 @@ input[type="password"]:focus, input[type="text"]:focus, textarea:focus{
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#C37E4C',EndColorStr='#AB6634');
     border: 1px solid #C37E4C;
     color: #FFF !important;
+    padding: 2px 10px 3px;
 }
 
 .button-edit, .button-remove, .button-view{
@@ -166,9 +169,6 @@ a.button-edit, a.button-remove, a.button-view{
 .button-remove{
     background: #C00;
     width: 55px;
-}
-.save, .new, .button, .cancel{
-    height: 22px;
 }
 
 .save:hover, .new:hover, .button:hover, .landing-button{
@@ -331,4 +331,22 @@ button a{
     position: absolute;
     left: 31px;
     top: 5px;
+}
+
+#profile_permission_form_holder .sf_admin_form_row label,
+#profile_group_form_holder .sf_admin_form_row label,
+#student_form_holder .sf_admin_form_row label,
+#instructor_form_holder .sf_admin_form_row label{
+    float: none !important;
+}
+
+.checkbox_list{
+    margin-left: 10px;
+}
+
+.checkbox_list label{
+    position: absolute;
+    left: 50px;
+    top: -1px;
+    width: 341px !important;
 }
