--- a/web/css/main.css
+++ b/web/css/main.css
@@ -349,7 +349,7 @@ ul.instTree li.node{
 }
 
 ul.instTree li.node.active-node > .text{
-    background-color: #DDDDDD;
+    background-color: #EEEDDD;
 }
 
 ul.instTree li.node > .text{
