--- a/web/css/tutorplus.css
+++ b/web/css/tutorplus.css
@@ -158,7 +158,7 @@
 #top-menu a{
     padding: 10px 9px 10px 10px;
     display: block;
-    font-size: 12px;
+    font-size: 11px;
     text-transform: uppercase;
     height: 25px;
     text-decoration: none !important;
@@ -224,12 +224,17 @@
     width: 218px;
     float: left;
     margin-top: 20px;
+    position: fixed;
 }
 
 #middle-column{
     margin-left: 218px;
     padding-bottom: 40px;
     width: 722px
+}
+
+#middle-column .notice{
+    margin-left: -218px;
 }
 
 #middle-landing-column{
@@ -394,8 +399,9 @@
 .full-block{
     position: relative;
     background-color: #FFFFFF;   
-    border-right: 1px solid #DDD;
-    border-left: 1px solid #DDD;
+    border-right: 1px solid #EEE;
+    border-left: 1px solid #EEE;
+    border-bottom: 1px solid #EEE;
 }
 
 .full-block table{
@@ -428,7 +434,7 @@
 }
 
 #sf_admin_container .content-block h2, .sf_admin_form fieldset h2{
-    background-color: #DDD;
+    background-color: #EEE;
     height: 20px;
     font-weight: normal;
     font-size: 12px;
@@ -965,6 +971,8 @@
 
 .no-result{
     padding: 10px;
+    background-color: white;
+    border: 1px solid #EEE;
 }
 
 .no-padding{
@@ -1056,7 +1064,7 @@
     padding: 5px 10px;
     position: relative;
     display: block;
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #EEE;
     min-height: 44px;
     max-height: 44px;
 }
@@ -1101,7 +1109,7 @@
 .peer-block{
     overflow: hidden;
     background-color: #FFF;
-    border: 1px solid #DDD;
+    border: 1px solid #EEE;
 }
 
 .label{
@@ -1185,9 +1193,9 @@ ul.nav-tabs li a{
 
 ul.nav-tabs li.active-tab {
     background: #FFF;
-    border-top: 1px solid #DDD;
-    border-left: 1px solid #DDD;
-    border-right: 1px solid #DDD;
+    border-top: 1px solid #EEE;
+    border-left: 1px solid #EEE;
+    border-right: 1px solid #EEE;
     color: #008FC5;
 }
 
@@ -1210,7 +1218,7 @@ ul.nav-tabs li.active-tab {
 .thread {
     position: relative;
     padding: 10px;
-    border-top: 1px solid #DDD;
+    border-top: 1px solid #EEE;
 }
 
 .message {
@@ -1326,7 +1334,7 @@ textarea {
     position: relative;
     clear: both !important;
     height: 25px;
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #EEE;
     padding-top: 5px;
     padding-bottom: 5px;
 }
@@ -1390,7 +1398,8 @@ ul.department-course, .section-block ul{
     margin: 10px 0 0 10px;
 }
 
-.follwers_tab{
+.followers_tab{
     overflow: auto;
     height: 300px;
+    border-top: 1px solid #EEE;
 }
