--- a/web/css/jquery.jcrop.css
+++ b/web/css/jquery.jcrop.css
@@ -15,7 +15,7 @@
 	font-size: 1px;
 	width: 7px !important;
 	height: 7px !important;
-	border: 1px #eee solid;
+	border: 1px #EBEAE9 solid;
 	background-color: #333;
 }
 
