--- a/web/css/student.css
+++ b/web/css/student.css
@@ -71,7 +71,7 @@
 }
 
 #choose_programes li {
-    border-bottom: 1px solid #EEEDDD;
+    border-bottom: 1px solid #EBEAE9DDD;
     display: block;
     float: left;
     height: 20px;
@@ -107,7 +107,7 @@
 }
 
 #choose_courses li {
-    border-bottom: 1px solid #EEEDDD;
+    border-bottom: 1px solid #EBEAE9DDD;
     display: block;
     float: left;
     height: 20px;
@@ -124,7 +124,7 @@
 }
 
 #choose_mailing_lists li {
-    border-bottom: 1px solid #EEEDDD;
+    border-bottom: 1px solid #EBEAE9DDD;
     display: block;
     float: left;
     height: 20px;
@@ -137,7 +137,7 @@
 
 .student-item {
     height: 80px;
-    border-top: 1px solid #EEE;
+    border-top: 1px solid #EBEAE9;
 }
 
 .student-item .image {
