--- a/web/css/discussion.css
+++ b/web/css/discussion.css
@@ -145,7 +145,7 @@ span.separator{
 
 .discussion_topic_reply{
     padding: 0 0 0 10px;
-    background-color: #EEEEEE;
+    background-color: #EBEAE9EEE;
 }
 
 .user-meta{
@@ -222,7 +222,7 @@ span.separator{
     display: inline-block;
     clear: both !important;
     width: 465px;
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid #EBEAE9;
     padding: 5px 0;
 }
 
@@ -351,7 +351,7 @@ span.separator{
 }
 
 .message{
-    border: 1px solid #EEE;
+    border: 1px solid #EBEAE9;
     margin-left: 65px;
     padding: 5px;
     min-height: 41px;
@@ -373,14 +373,14 @@ span.separator{
     margin: -1px 0 0 65px;
     clear: both;
     background-color: #F9F9F9;
-    border: 1px solid #EEE;
+    border: 1px solid #EBEAE9;
     border-bottom: none !important;
     border-right: none !important;
 }
 
 .comment{
     padding: 10px 0 5px 10px;
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid #EBEAE9;
 }
 
 #discussion_topic_reply_reply{
@@ -389,7 +389,7 @@ span.separator{
 }
 
 .replies-count{
-    color: #C37E4C;
+    color: #BB6E3C;
 }
 
 .discussion-left-block{
@@ -448,7 +448,7 @@ span.separator{
     background-color: white;
     padding: 5px;
     width: 60px;
-    border: 1px solid #EEE;
+    border: 1px solid #EBEAE9;
     padding-top: 0px;
     display: none;
 }
@@ -463,7 +463,7 @@ span.separator{
     height: 47px;
     word-break: break-all;
     clear: both;
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid #EBEAE9;
     padding: 10px;
 }
 
@@ -475,7 +475,7 @@ span.separator{
     padding: 5px 10px;
     position: relative;
     display: block;
-    border-top: 1px solid #EEE;
+    border-top: 1px solid #EBEAE9;
 }
 
 .discussion, .discussion_topic{
@@ -484,7 +484,7 @@ span.separator{
     display: block;
     clear: both;
     background-color: #FFF;
-    border-top: 1px solid #EEE;
+    border-top: 1px solid #EBEAE9;
 }
 
 #middle-column .notice{
