--- a/web/css/jquery.treeview.css
+++ b/web/css/jquery.treeview.css
@@ -36,7 +36,7 @@
 }
 
 .treeview a.selected{
-    background-color: #eee;
+    background-color: #EBEAE9;
 }
 
 #treecontrol{ margin: 1em 0; display: none; }
