--- a/web/css/jquery/jquery.tools.css
+++ b/web/css/jquery/jquery.tools.css
@@ -33,7 +33,7 @@
     text-align: center;
     width: 167px;
     line-height: 20px;
-    text-shadow: 0 1px 0 #EEE;
+    text-shadow: 0 1px 0 #EBEAE9;
     margin-left: 55px;
 }
 
@@ -69,7 +69,7 @@
 /* names of the days */
 #caldays {
     height: 25px;
-    border-bottom: 1px solid #EEE;
+    border-bottom: 1px solid #EBEAE9;
     text-align: left;
     clear: both;
     padding-left: 19px;
