--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -16,7 +16,7 @@
     height: 22px;
 }
 #sf_admin_heading h3, .sf_admin_heading h3{
-    color: #C37E4C;
+    color: #BB6E3C;
     font-weight: bold;
     font-size: 12px;
     text-transform: uppercase;
@@ -49,7 +49,7 @@
     background-color: #FFFFFF;
 }
 .sf_admin_list th, #discussion_topics_footer{
-    background-color: #EEE;
+    background-color: #EBEAE9;
     color: #7E7E7E;
     font-size: 12px;
     font-weight: normal;
@@ -59,7 +59,7 @@
 .sf_admin_list th a{
     font-size: 12px;
     font-weight: normal;
-    color: #C37E4C !important;
+    color: #BB6E3C !important;
 }
 .sf_admin_list th a:hover{
     text-decoration: underline !important;
