--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -98,6 +98,7 @@
 .sf_admin_form fieldset .sf_admin_form_row{
   padding: 5px 10px;
   font-size: 12px;
+  position: relative;
 }
 
 .sf_admin_form_row div.help{
@@ -159,6 +160,7 @@ ul.sf_admin_td_actions li.sf_admin_action_delete{
   padding: 5px 10px;
   color: #037D52;
   border: 1px solid #037D52;
+  margin-bottom: 10px;
 }
 
 .sf_admin_td_actions img {
